...
                .padding(bottom = 4.dp)
        )

        OutlinedTextField(
            value = txtEmail,
            onValueChange = { txtEmail = it },
            placeholder = { Text("Ingresa tu correo electrónico") },
            singleLine = true,
            shape = RoundedCornerShape(25.dp),
            colors = OutlinedTextFieldDefaults.colors(
                focusedBorderColor = Color(0xFF5C0F1A),
                unfocusedBorderColor = Color.Gray,
                cursorColor = Color(0xFF5C0F1A)
...
                .padding(bottom = 4.dp)
        )

        OutlinedTextField(
            value = txtPass,
            onValueChange = { txtPass = it },
            placeholder = { Text("Ingresa tu contraseña") },
            singleLine = true,
            shape = RoundedCornerShape(25.dp),
            colors = OutlinedTextFieldDefaults.colors(
                focusedBorderColor = Color(0xFF5C0F1A),
                unfocusedBorderColor = Color.Gray,
                cursorColor = Color(0xFF5C0F1A)
...
            modifier = Modifier
                .fillMaxWidth()
                .height(50.dp),
            shape = RectangleShape
        ) {
            Text(
                text = "Iniciar sesión",
                color = Color.White,
                fontWeight = FontWeight.Bold,
                fontSize = 24.sp
            )
        }

...
                    uncheckedThumbColor = Color.Gray,
                    uncheckedTrackColor = Color.LightGray,
                    uncheckedBorderColor = Color.Transparent
                )
            )
            Text(
                text = "Recordar credenciales",
                fontSize = 15.sp,
                fontWeight = FontWeight.Bold
            )

        }
        Spacer(modifier = Modifier.height(20.dp))
...
